<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer"
    android:orientation="vertical">

    <TextView style="@style/WizardPageTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_visibility" />

            <RadioGroup
                android:id="@+id/visibilityRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/visibility_public" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/visibility_followers" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/visibility_private" />
            </RadioGroup>

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_height" />

            <Spinner
                android:id="@+id/heightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_weight" />

            <Spinner
                android:id="@+id/weightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

        </LinearLayout>
    </ScrollView>
</LinearLayout>