<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer"
    android:orientation="vertical">

    <TextView style="@style/WizardPageTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_visibility" />

            <RadioGroup
                android:id="@+id/visibilityRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/genderMaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="1"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/genderFemaleRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:tag="2"
                    android:text="@string/gender_female" />
            </RadioGroup>

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_height" />

            <NumberPicker
                android:id="@+id/heightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></NumberPicker>

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/label_weight" />

            <NumberPicker
                android:id="@+id/weightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></NumberPicker>

        </LinearLayout>
    </ScrollView>
</LinearLayout>